<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<resources>

    <string name="app_name">NUMAD15s-MattBentson</string>
    <string name="main_title" label="sudoku">Android Sudoku</string>
    <string name="continue_label" label="sudoku">Continue</string>
    <string name="new_game_label" label="sudoku">New Game</string>
    <string name="about_label" label="sudoku">About</string>
    <string name="exit_label" label="sudoku">Exit</string>
    <string name="settings_label" label="sudoku">Settings…</string>
    <string name="settings_title" label="sudoku">Sudoku settings</string>
    <string name="settings_shortcut" label="sudoku">s</string>
    <string name="music_title" label="sudoku">Music</string>
    <string name="music_summary" label="sudoku">Play background music</string>
    <string name="hints_title" label="sudoku">Hints</string>
    <string name="hints_summary" label="sudoku">Show hints during play</string>
    <string name="new_game_title" label="sudoku">Difficulty</string>
    <string name="easy_label" label="sudoku">Easy</string>
    <string name="medium_label" label="sudoku">Medium</string>
    <string name="hard_label" label="sudoku">Hard</string>
    <string name="game_title" label="sudoku">Game</string>
    <string name="no_moves_label" label="sudoku">No moves</string>
    <string name="keypad_title" label="sudoku">Keypad</string>
    <string name="about_title" label="sudoku">About Android Sudoku</string>
    <string name="about_text" label="sudoku">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>
    <string name="title_activity_main" label="MainPage">Matt Bentson</string>
    <string name="action_settings" label="MainPage">Settings</string>
    <string name="about_btn" label="MainPage">About Me</string>
    <string name="welcome_txt" label="MainPage">Welcome!</string>
    <string name="sudoku_btn" label="MainPage">Play Sudoku</string>
    <string name="error_btn" label="MainPage">Generate Error</string>
    <string name="dictionary_btn" label="MainPage">Dictionary</string>
    <string name="quit_btn" label="MainPage">Quit Application</string>
    <string name="title_activity_about_me" label="AboutMe">About Me</string>
    <string name="name_lbl" label="AboutMe">Name:</string>
    <string name="name_txt" label="AboutMe">Matthew Bentson</string>
    <string name="email_lbl" label="AboutMe">Email:</string>
    <string name="email_txt" label="AboutMe">bentson.m@husky.neu.edu</string>
    <string name="year_lbl" label="AboutMe">Year in School:</string>
    <string name="year_txt" label="AboutMe">Junior</string>
    <string name="major_lbl" label="AboutMe">Degree Program:</string>
    <string name="major_txt" label="AboutMe">Computer Engineering</string>
    <string name="unique_id" label="AboutMe">This Phone\'s Unique Identifier:</string>
    <string name="back_btn" label="Universal">Back</string>
    <string name="title_acks" label="Universal">Acknowledgments</string>
    <string name="title_activity_dictionary" label="Dictionary">Test Dictionary</string>
    <string name="dictionary_clear_btn" label="Dictionary">Clear</string>
    <string name="dictionary_ack_btn" label="Dictionary">Acknowledgments</string>
    <string name="dict_ack_txt" label="Dictionary">Zhongjie Mao: for insight into how to store/load my dictionary.\n\nStack Overflow: for the code to play the beep - http://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android</string>
    <string name="wordFade_btn" label="Wordfade">WordFade</string>
    <string name="title_activity_word_fade" label="Wordfade">WordFade</string>
    <string name="wordfade_keypad_title" label = "Wordade">Tile Rack</string>
    <string name="wordfade_score_label">Score: </string>
    <string name="wordfade_score_value">0</string>
    <string name="wordfade_submit_btn">Submit</string>
    <string name="wordfade_split_btn">Split</string>
    <string name="wordfade_dump_btn">Dump</string>
    <string name="wordfade_pause_btn">Pause</string>
    <string name="wordfade_quit_btn">Quit</string>
    <string name="title_activity_wordfade_pause">Paused</string>
    <string name="wordfade_resume_btn">Resume</string>
    <string name="title_activity_wordfade_menu">Wordfade</string>
    <string name="wordfade_play_btn">Play Wordfade</string>
    <string name="wordfade_music_btn">Music On/Off</string>
    <string name="title_activity_wordfade_acks">Acknowledgments</string>
    <string name="wordfade_acks_txt">http://www.barebonescoder.com/2010/06/android-development-simple-2d-graphics-part-1/:  For getting me started on my WordfadeGrid.java and LogicalBoard.java classes\n\nThis Sudoku App:  For helping with my WordfadeKeypad.java and numerous other areas where my game used similar features</string>
    <string name="title_activity_wordfade_instructions">Instructions</string>
    <string name="wordfade_instruct_btn">Instructions</string>
    <string name="wordfade_instruct_txt">- 60 second per move, -5 points if not\n\n- All words must be more than 3 letters\n\n- Split with under 21 letters to draw a letter\n\n- Dump with under 18 to give one and get three\n\n- Words fade after 10 turns of non-use\n\n- Game ends with negative points, or a word fading</string>
    <string name="communication_btn">Communication</string>
    <string name="title_activity_communication">Communication</string>
    <string name="communication_sendScore_btn">Send Score</string>
    <string name="communication_getScores_btn">Get Scores</string>
    <string name="communication_register_btn">Register</string>
    <string name="communication_unregister_btn">Unregister</string>
    <string name="communication_sendMessage_btn">Send Message</string>
    <string name="communication_clearMessage_btn">Clear Message</string>
    <string name="communication_getIds_btn">Get IDs</string>
    <string name="trickiest_part_btn">Trickiest Part</string>
    <string name="wordfadeMulti_btn">2 player Wordfade</string>
    <string name="title_activity_wordfade_multi">WordfadeMulti</string>

    <string name="hello_world">Hello world!</string>


</resources>
