<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.neu.madcourse.mattbentson.sudoku.MainActivity"
    android:background="#ffecffd6">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_btn"
        android:id="@+id/aboutBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="50dp"
        android:width="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="159dp"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_txt"
        android:id="@+id/welcomeText"
        android:textColor="#ff000000"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudoku_btn"
        android:id="@+id/sudokuBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="50dp"
        android:width="250dp"
        android:textSize="24dp"
        android:layout_below="@+id/aboutBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_btn"
        android:id="@+id/errorBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="50dp"
        android:width="250dp"
        android:textSize="24dp"
        android:textAllCaps="false"
        android:layout_below="@+id/sudokuBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_btn"
        android:id="@+id/quitBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="50dp"
        android:width="250dp"
        android:textSize="24dp"
        android:textAllCaps="false"
        android:layout_below="@+id/errorBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
