<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.neu.madcourse.mattbentson.WordfadeMenu"
    android:background="#ffecffd6">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_ack_btn"
        android:id="@+id/wordfadeAckBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="30dp"
        android:width="200dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:clickable="true"
        android:layout_below="@+id/wordfadePlayBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordfade_play_btn"
        android:id="@+id/wordfadePlayBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="30dp"
        android:width="200dp"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:clickable="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:id="@+id/wordfadeBackBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="30dp"
        android:width="200dp"
        android:textSize="20dp"
        android:clickable="true"
        android:layout_below="@+id/wordfadeInstructBtn"
        android:layout_alignLeft="@+id/wordfadeInstructBtn"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordfade_instruct_btn"
        android:id="@+id/wordfadeInstructBtn"
        android:background="#ffffa8b1"
        android:textColor="#ff000000"
        android:height="30dp"
        android:width="200dp"
        android:textSize="20dp"
        android:clickable="true"
        android:layout_below="@+id/wordfadeAckBtn"
        android:layout_alignLeft="@+id/wordfadeAckBtn"
        android:layout_marginTop="20dp" />
</RelativeLayout>
